--- a/falcon_llm_inference_with_langchain.ipynb
+++ b/falcon_llm_inference_with_langchain.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "63892203-fc03-4117-ae19-9298bb3f83b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: Could not install packages due to an OSError: [Errno 13] Permission denied: 'file_structure_representation.cpython-310.pyc'\n",
+      "Consider using the `--user` option or check the permissions.\n",
+      "\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!pip install -q transformers einops accelerate langchain bitsandbytes xformers"
    ]
@@ -20,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Jun  9 19:22:54 2023       \n",
+      "Fri Jun 16 09:33:25 2023       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 510.47.03    Driver Version: 510.47.03    CUDA Version: 11.6     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -28,8 +39,8 @@
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-      "| N/A   44C    P0    26W /  70W |      0MiB / 15360MiB |     11%      Default |\n",
+      "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
+      "| N/A   43C    P0    32W / 250W |    255MiB / 16384MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -38,7 +49,7 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|  No running processes found                                                 |\n",
+      "|    0   N/A  N/A      5290      C   /opt/conda/bin/python             253MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -56,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ae33c9a963b40b0abb8e7b4f1f6688e",
+       "model_id": "b30ca4c9091349c294f881d4feab1e45",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15ec7853ac0349e2aa8e42f0b8cfde3a",
+       "model_id": "f7a16896a95a4b6c84c4843d52bf01de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55509e17b4704b89a6ea3594571fdadd",
+       "model_id": "38bf9812708e4ec99555a16eed24896a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6137c9f7397d4185a9303b8dc60bea7c",
+       "model_id": "7553b0688b2c4ddf8cedf89692d53aed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a6f5519b6484b159770c7f0db96f909",
+       "model_id": "212c902524454fcdb6a41256f7126907",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "984d891a2c8548648aba9f01715305b0",
+       "model_id": "d46339489804413db44cd7ca46a3ffc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "968e7812ea494c93a97788b7ba9d9327",
+       "model_id": "f4ecd781cb864819be59c4d1089d6224",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a505031a08784357a2e5a4ac023af3f9",
+       "model_id": "9443f6766a314b68b5ea54f1515f9fa1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7dd04a6a78e4774b4079b9807391649",
+       "model_id": "c148663d141940f09a530cdcaa4b8eb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c5d128e97734175b8d54767665e972d",
+       "model_id": "1e2d506063df41838c6d9c6c1cb9b62a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +243,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a95a11b3750462a904bd62b6dedf932",
+       "model_id": "e4b48188a5774b7d99b81f1d0f0067b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "444848293aa742fba0ec488a3921fa5f",
+       "model_id": "ecd3a6ce7c4148278d2e4999ef3a1b74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5b9b3054-99b8-4c26-bda2-39e55c68d191",
    "metadata": {},
    "outputs": [],
@@ -296,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "2094a3ff-cef7-41c4-b2ee-57bd901ab39b",
    "metadata": {},
    "outputs": [],
@@ -306,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "ce1f9d9e-8bfd-4020-b90b-f68343336f17",
    "metadata": {},
    "outputs": [
@@ -314,8 +325,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/site-packages/transformers/generation/utils.py:1259: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation)\n",
-      "  warnings.warn(\n",
       "Setting `pad_token_id` to `eos_token_id`:11 for open-end generation.\n"
      ]
     },
@@ -323,11 +332,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A transformer is an AI language model which uses multiple layers of neural networks to map input data into a new format. It can be used for natural language processing tasks such as sentiment analysis, machine translation, and text classification. Transformers work by learning from the data given to them and using the learned features to generate new predictions or outputs.\n"
+      "Large language models use a combination of natural language processing and machine learning algorithms to predict the next word in a sentence. These models analyze patterns in text, learn from examples of sentences, and use them to generate the next word or phrase with a high degree of accuracy. These models use a variety of techniques, such as neural networks, convolutional neural networks, and recurrent neural networks to identify patterns in text which are then used to generate a prediction for the next word or phrase in a sentence. These models are trained on vast amounts of data, which allows them to capture complex language nuances and learn over time. The models also adjust themselves over time by learning from their own mistakes to continually improve their accuracy.\n",
+      "CPU times: user 57.5 s, sys: 0 ns, total: 57.5 s\n",
+      "Wall time: 57.5 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "template = \"\"\"\n",
     "You are an intelligent chatbot, Help the following question with brilliant answers.\n",
     "Question: {question}\n",
@@ -335,11 +347,19 @@
     "\"\"\"\n",
     "prompt = PromptTemplate(template=template, input_variables=[\"question\"])\n",
     "llm_chain = LLMChain(prompt=prompt, llm=llm)\n",
-    "question = \"Explain what is a transformer in the context of artificial intelligence\"\n",
+    "question = \"Can you explain how large language models can predrict the next word into a sentence?\"\n",
     "\n",
     "\n",
     "print(llm_chain.run(question))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d14d979-207d-426c-9d09-fe63babcf768",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
